<resources>
    <string name="app_name">Prayer</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks_library">Bookmarks Library</string>
    <string name="go">GO</string>
    <string name="def">DE</string>
    <string name="leave">Leave</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="reload">Reload</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="default_website">github.com</string>
    <string name="websites.txt">websites.txt</string>
    <string name="bookmarks.txt">bookmarks.txt</string>
    <string name="config.txt">config.txt</string>
</resources>