<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"
        android:textSize="30sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/comment"
        style="@style/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?android:attr/dialogPreferredPadding"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="?android:attr/dialogPreferredPadding"
        android:padding="10dp"
        android:textSize="25sp"
        android:fontFamily="@font/productsans_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/done"
            style="@style/Button" />

    </LinearLayout>

</LinearLayout>